# blueWin

./: .gitignore  LICENSE  Makefile  README.md  bt-sync.py  bt_sync.py  pyproject.toml
.github/workflows/: ci.yml
